player1/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: npplayer1
  namespace: nsplayer1
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - from:
    podSelector: {}
    namespaceSelector: {}
